# BuyMe_website_sanity_test_project

./: base_page.py  config.json  constants.py  home_screen.py  intro_screen.py  main_test.py  pick_business_screen.py  pyproject.toml  sender_receiver_screen.py
allure-report/: 808d5322-2100-407e-bf8c-1164711429d3-result.json  9be623ff-7151-4b6f-acd3-08583d74073d-container.json
